--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <link href="/common.css" rel="stylesheet">
 <link href="/guestbook.css" rel="stylesheet">
 
-<title>방명록 (K8S) with park</title>
+<title>방명록 (K8S) 002</title>
 </head>
 <body>
 	<div class="guestbook list displaynone" style="display: block;">
